--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -9,5 +9,8 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
 RUN npm install --silent
 RUN npm install react-scripts@3.3.1 -g --silent
+##Caso se usarmos React-Router
+#RUN rm /etc/nginx/conf.d/default.conf 
+#COPY nginx/nginx.conf /etc/nginx/conf.d
 # Inicializa a aplicação
 CMD ["npm", "start"]
